--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,12 @@
 .itemone,.itemtwo{
     display: flex;
     width: 50%;
+    justify-content: space-between;
+    margin-right: 20%;
+}
+
+.itemtwo{
+    margin-right: 15%;
 }
 .logo{
     width: 30%;
