--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,8 @@ div{
     margin-right: 15%;
 }
 .logo{
+    background-image: url("https://images.pexels.com/photos/7303342/pexels-photo-7303342.jpeg");
+    /* https://www.pexels.com/@cup-of-couple/ */
     width: 30%;
 }
 
