--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 div{
-    margin-top: 2.1px;
+    margin-top: 4px;
 }
 
 .major{
@@ -18,6 +18,7 @@ div{
     width: 50%;
     justify-content: space-between;
     margin-right: 20%;
+    flex-direction: column;
 }
 
 .itemtwo{
