added background image file

--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,10 @@ div{
     margin-right: 15%;
 }
 .logo{
-    background-image: url("https://images.pexels.com/photos/7303342/pexels-photo-7303342.jpeg");
+    background-image: url('https://images.pexels.com/photos/7303342/pexels-photo-7303342.jpeg');
     /* https://www.pexels.com/@cup-of-couple/ */
     width: 30%;
+    height: auto;
 }
 
 .header{
