--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,13 @@ div{
     width: 70%;
     align-items: flex-start;
     justify-content: left;
+    gap: 20%;;
 }
 
 .itemone,.itemtwo{
     display: flex;
     width: 50%;
     justify-content: space-between;
-    margin-right: 20%;
     flex-direction: column;
 }
 
