--- a/css/style.css
+++ b/css/style.css
@@ -30,12 +30,14 @@ div{
     background-image: url("https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80");
     /* https://www.pexels.com/@cup-of-couple/ */
     /*margin: 0 auto auto 0;*/
-    width: 30%;
+    width: 60%;
 }
 
 .header{
-    margin-top: 5%;
+    margin-top: 15%;
     width: 70%;
+    font-weight: bold;
+    font-size: 1.8vw;
 }
 
 h3{
