--- a/css/style.css
+++ b/css/style.css
@@ -37,9 +37,11 @@ div{
     margin-top: 15%;
     width: 70%;
     font-weight: bold;
-    font-size: 1.8vw;
+    font-size: 1.6vw;
 }
 
 h3{
     margin-top: 4%;
+    font-size: 2vw;
+    color: rgb(133, 10, 10);
 }
