--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,9 @@ svg{
     text-align: center;
     margin-top: 35%;
 }
+.credits{
+    margin-top: 99%;
+    text-align: center;
+    font-size: 1em;
+    color: aqua;
+}
