--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,15 @@ svg{
 .credits{
     margin-top: 99%;
     text-align: center;
-    font-size: 1em;
+    font-size: 1.5em;
     color: aqua;
+}
+
+button{
+    margin-top: 0.5%;
+    border-radius: 5px;
+    background-color: springgreen;
+    font-weight: 600;
+    height: 27px;
+    width: 85px;
 }
