added properties to remove arrows from number input type

--- a/css/style.css
+++ b/css/style.css
@@ -73,3 +73,14 @@ button{
     height: 27px;
     width: 85px;
 }
+
+/*Section to hide arows from input type = number*/
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
