made pw mismatch text red and bold and small

--- a/css/style.css
+++ b/css/style.css
@@ -92,3 +92,9 @@ input:focus{
 input{
     border-color: #E5E7EB;
 }
+
+.pwmismatch{
+    color: red;
+    font-size: 0.9em;
+    font-weight: bold;
+}
