--- a/css/style.css
+++ b/css/style.css
@@ -60,9 +60,12 @@ svg{
 }
 .credits{
     margin-top: 99%;
+    max-width: 90%;
     text-align: center;
-    font-size: 1.5em;
+    font-size: 1.3em;
     color: aqua;
+    display: block;
+    text-align: center;
 }
 
 button{
